add flow_mod instruction; more detailed flow predicate, flow action, priority;